Remove legacy dependencies
Remove the following dependencies and replace with standard Java:
- commons-io
- commons-net
- guava

Issue-ID: POLICY-5592
Change-Id: I500aa6983e82b9bd8051c4d7bc5947257beb1bce
Signed-off-by: danielhanrahan <daniel.hanrahan@est.tech>